intro to type systems | prl-read-group :: type foundations of OO-langs

--- a/assets/css/PITCHME.css
+++ b/assets/css/PITCHME.css
@@ -1,4 +1,8 @@
 .reveal .slides {
-    background-color: #f3f6f9;
+    background-color: #f5f9ff;
+    padding: 10px;
 }
 
+.reveal .slides p {
+    text-align: left;
+}
